--- a/app/src/main/res/layout/sample_receiver.xml
+++ b/app/src/main/res/layout/sample_receiver.xml
@@ -13,6 +13,7 @@
     android:maxHeight="400dp"
     android:minHeight="30dp"
     android:layout_marginTop="5dp"
+    android:id="@+id/receiver_constraint_layout"
     android:layout_marginBottom="4dp">
 
     <TextView
