--- a/app/src/main/res/layout/sample_senders.xml
+++ b/app/src/main/res/layout/sample_senders.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/sender_constraint_Layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -21,7 +22,7 @@
         android:minHeight="30dp">
 
         <TextView
-            android:id="@+id/sender_textviewGroup"
+            android:id="@+id/sender_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
