--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="navy_blue">#145DA0</color>
     <color name="chatBackground">#AAAAAA</color>
     <color name="lightGreen">#e5ffcc</color>
+    <color name="sender_color">#ADD8E6</color>
 
 </resources>
