--- a/app/src/main/res/layout/chat_item_self.xml
+++ b/app/src/main/res/layout/chat_item_self.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
-        android:background="@drawable/chatself"
-        android:textColor="@android:color/white"
+
+        android:textColor="@color/black"
         android:textIsSelectable="true"
         android:textSize="14sp" />
 
