--- a/app/src/main/res/layout/content_chat_room.xml
+++ b/app/src/main/res/layout/content_chat_room.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="50dp"
         android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
+//hello
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
