--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -6,25 +6,27 @@
     <string name="assistant_id">37a17d17-c964-4e84-83ca-22a81b9634ed</string>
 
     <!-- REPLACE `ASSISTANT_API_KEY_HERE` with Watson Assistant service API Key-->
-    <string name="assistant_apikey">utfKuYVe25Ef1UJ2gtXw_4xk5wNd6TyyLbVhjZIvn0eX</string>
+    <string name="assistant_apikey">KoxPX_ZONIh6id7cuh3wp4pRLAj4IwvQF2oPzki41Jvf</string>
 
     <!-- REPLACE the URL with the one provided in the credentials of the service you created-->
-    <string name="assistant_url">https://api.eu-gb.assistant.watson.cloud.ibm.com/instances/887d6287-e071-4d52-9424-e1fd39b769e7/v2/assistants/37a17d17-c964-4e84-83ca-22a81b9634ed/sessions</string>
+    <string name="assistant_url">https://api.eu-de.assistant.watson.cloud.ibm.com/instances/0ceb35f9-ccb5-4194-8959-c699c5584d46</string>
 
 
     <!--Watson Speech To Text(STT) service credentials-->
     <!-- REPLACE `STT_API_KEY_HERE` with Watson Speech to Text service API Key-->
-    <string name="STT_apikey">UMq935AmlbDnGZHQTgHPrGWJc0AECCu74UELgBvBxJpz</string>
+    <string name="STT_apikey"> eFXSzljYkDG1b0Hh0wXDAg6uckyGSxeuNBjY_KV9my_J</string>
 
 
     <!-- REPLACE the URL with STT URL provided in the service credentials -->
-    <string name="STT_url">https://api.au-syd.speech-to-text.watson.cloud.ibm.com/instances/212c1ddd-9ba4-4ca6-b2b6-b191d16e7399</string>
+    <string name="STT_url">https://api.au-syd.speech-to-text.watson.cloud.ibm.com/instances/3dc7d1b9-a1e8-40e8-bcc9-7dc8f5c9ff4c
+</string>
 
 
     <!--Watson Text To Speech(TTS) service credentials-->
     <!-- REPLACE `TTS_API_KEY_HERE` with Watson Text to Speech service API Key-->
-    <string name="TTS_apikey">nzHgbGgvoPlXckKhu9-vZmxQ9NPxHnReUsvkQC8duIhp</string>
+    <string name="TTS_apikey">V0ERroDZZIsWlPA5GjKAosKVf70i404BcHQVZatIEs9t
+</string>
 
     <!-- REPLACE the URL with TTS URL provided in the service credentials -->
-    <string name="TTS_url">https://api.au-syd.text-to-speech.watson.cloud.ibm.com/instances/d9a5511f-02f3-4e1f-ac6b-b430bf202243</string>
+    <string name="TTS_url"> https://api.au-syd.text-to-speech.watson.cloud.ibm.com/instances/03390de9-5817-4c81-92fb-b1566675233c</string>
 </resources>
