--- a/app/src/main/res/layout/activity_chat_details.xml
+++ b/app/src/main/res/layout/activity_chat_details.xml
@@ -126,10 +126,13 @@
         android:id="@+id/description_popup"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_weight="2"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_weight="2"
         android:src="@drawable/description_img"
         app:tint="@color/white" />
 
