--- a/app/src/main/res/layout/activity_pop_up_window.xml
+++ b/app/src/main/res/layout/activity_pop_up_window.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".PopUpWindow"
     android:orientation="vertical"
-    android:background="@color/navy_blue"
-    android:gravity="center">
+    android:background="@color/navy_blue">
 
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,6 +15,7 @@
         android:layout_height="120dp"
         android:layout_marginLeft="5dp"
         android:padding="5dp"
+        android:layout_gravity="center"
         android:src="@drawable/user_profile_img"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp" />
