--- a/app/src/main/res/layout/sample_receiver.xml
+++ b/app/src/main/res/layout/sample_receiver.xml
@@ -18,21 +18,17 @@
 
     <ImageView
         android:id="@+id/receiver_imageview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:maxWidth="310dp"
+        android:maxHeight="520dp"
+        android:scaleType="fitCenter"
         android:src="@drawable/grey_gallery_img"
         android:visibility="gone"
-        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:maxWidth="310dp"
-        android:padding="15dp"
-        android:maxHeight="400dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -59,7 +55,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="3dp"
         android:text="12:00pm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
