--- a/app/src/main/res/layout/sample_senders.xml
+++ b/app/src/main/res/layout/sample_senders.xml
@@ -23,13 +23,11 @@
 
         <ImageView
             android:id="@+id/sender_imageview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+             android:layout_margin="5dp"
             android:maxWidth="310dp"
-            android:maxHeight="400dp"
+            android:maxHeight="520dp"
             android:scaleType="fitCenter"
             android:src="@drawable/grey_gallery_img"
             android:visibility="gone"
@@ -64,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="5dp"
             android:text="TextView"
             android:textSize="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
